// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MoreDirectChannels should exclude deleted users if there is not direct channel between users 1`] = `
<GenericModal
  bodyPadding={false}
  className="a11y__modal more-modal more-direct-channels more-direct-channels-generic-modal"
  compassDesign={true}
  delayFocusTrap={true}
  id="moreDmModal"
  modalHeaderText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Direct Messages"
      id="more_direct_channels.title"
    />
  }
  modalLocation="top"
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  show={true}
>
  <div
    role="application"
  >
    <Connect(Component)
      addValue={[Function]}
      currentUserId="current_user_id"
      handleDelete={[Function]}
      handleHide={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      isExistingChannel={false}
      loading={true}
      saving={false}
      search={[Function]}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      totalCount={3}
      users={
        Array [
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_1",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_2",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 1,
            "email": "",
            "first_name": "",
            "id": "deleted_user_1",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 1,
            "email": "",
            "first_name": "",
            "id": "deleted_user_2",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 1,
            "email": "",
            "first_name": "",
            "id": "deleted_user_3",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
        ]
      }
      values={Array []}
    />
  </div>
</GenericModal>
`;

exports[`components/MoreDirectChannels should match snapshot 1`] = `
<GenericModal
  bodyPadding={false}
  className="a11y__modal more-modal more-direct-channels more-direct-channels-generic-modal"
  compassDesign={true}
  delayFocusTrap={true}
  id="moreDmModal"
  modalHeaderText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Direct Messages"
      id="more_direct_channels.title"
    />
  }
  modalLocation="top"
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  show={true}
>
  <div
    role="application"
  >
    <Connect(Component)
      addValue={[Function]}
      currentUserId="current_user_id"
      handleDelete={[Function]}
      handleHide={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      isExistingChannel={false}
      loading={true}
      saving={false}
      search={[Function]}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      totalCount={3}
      users={
        Array [
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_1",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_2",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_3",
            "is_bot": false,
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
          },
        ]
      }
      values={
        Array [
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_1",
            "is_bot": false,
            "label": "some-user",
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
            "value": "user_id_1",
          },
          Object {
            "auth_service": "",
            "bot_description": "",
            "create_at": 0,
            "delete_at": 0,
            "email": "",
            "first_name": "",
            "id": "user_id_2",
            "is_bot": false,
            "label": "some-user",
            "last_activity_at": 0,
            "last_name": "",
            "last_password_update": 0,
            "last_picture_update": 0,
            "locale": "",
            "mfa_active": false,
            "nickname": "",
            "notify_props": Object {
              "calls_desktop_sound": "true",
              "channel": "false",
              "comments": "never",
              "desktop": "default",
              "desktop_sound": "false",
              "email": "false",
              "first_name": "false",
              "highlight_keys": "",
              "mark_unread": "mention",
              "mention_keys": "",
              "push": "none",
              "push_status": "offline",
            },
            "password": "",
            "position": "",
            "props": Object {},
            "roles": "",
            "terms_of_service_create_at": 0,
            "terms_of_service_id": "",
            "update_at": 0,
            "username": "some-user",
            "value": "user_id_2",
          },
        ]
      }
    />
  </div>
</GenericModal>
`;
